--- a/re_group_chal/src/components/Navbar.css
+++ b/re_group_chal/src/components/Navbar.css
@@ -1,5 +1,21 @@
-.bg-body-tertiary{
+.navbar{
     background-color: #000000;
-    display: inline-block;
+    width: 40%;
+    margin: auto;
+    border-radius: 0px 0px 15px 15px;
+    padding-top: 25px;
+    padding-bottom: 5px;
 }
 
+
+.nav-link{
+    display: inline-block;
+    list-style: none;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.nav-link:hover{
+    font-weight: bold !important;
+    border-bottom: 1px solid #ffffff !important;
+}
