--- a/re_group_chal/src/components/Navbar.css
+++ b/re_group_chal/src/components/Navbar.css
@@ -3,13 +3,15 @@
     width: 40%;
     margin: auto;
     border-radius: 0px 0px 15px 15px;
-    padding-top: 25px;
-    padding-bottom: 5px;
 }
 
+.me-auto{
+    display: flex;
+    justify-content: center;
+}
 
 .nav-link{
-    display: inline-block;
+    margin-left: 35px;
     list-style: none;
     text-decoration: none;
     color: #ffffff;
